ir/parser/ir_parser.go
// Code generated from IR.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // IR

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'ret'", "'call'", "'getelementptr'", "", "", "'declare'", "'define'",
	"'private'", "'nounwind'", "'nocapture'", "'unnamed_addr'", "'null'", "'global'",
	"'constant'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'\"'",
	"','", "'*'", "'%'", "';'", "'!'", "'@'", "'.'", "'x'", "'-'", "'i8'",
	"'i32'", "'i64'",
}
var symbolicNames = []string{
	"", "", "", "", "COMMENT", "WHITESPACE", "DECLARE", "DEFINE", "PRIVATE",
	"NOUNWIND", "NOCAPTURE", "UNNAMMED_ADDR", "NULL", "GLOBAL", "CONSTANT",
	"LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "EQUAL", "DOUBLEQUOTE",
	"COMMA", "STAR", "PERCENT", "SEMICOLON", "EXCLAMATION", "AT", "DOT", "MULTIPLY",
	"MINUS", "TYPE_I8", "TYPE_I32", "TYPE_I64", "NAME", "DECIMALS", "METADATA",
	"QUOTED_STRING", "STRING_LIT",
}

var ruleNames = []string{
	"ir", "statSeq", "statSeqTail", "stat", "type_", "singleValueType", "arrayType",
	"pointerType", "visibility", "localIdent", "localName", "globalIdent",
	"globalName", "statGlobalDef", "statFunctDecl", "statFunctDef", "functSignature",
	"functDeclArgsList", "functDeclArgsListTail", "functDeclArg", "functAttribsList",
	"functAttrib", "parameterAttrib", "functCallArgsList", "functCallArgsListTail",
	"functCallArg", "instructionSeq", "instructionSeqTail", "instruction",
	"instructionRet", "instructionCall", "instructionGetelementptr", "instructionGetelementptrTail",
	"value", "exprConstant",
}

type IRParser struct {
	*antlr.BaseParser
}

// NewIRParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *IRParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewIRParser(input antlr.TokenStream) *IRParser {
	this := new(IRParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "IR.g4"

	return this
}

// IRParser tokens.
const (
	IRParserEOF           = antlr.TokenEOF
	IRParserT__0          = 1
	IRParserT__1          = 2
	IRParserT__2          = 3
	IRParserCOMMENT       = 4
	IRParserWHITESPACE    = 5
	IRParserDECLARE       = 6
	IRParserDEFINE        = 7
	IRParserPRIVATE       = 8
	IRParserNOUNWIND      = 9
	IRParserNOCAPTURE     = 10
	IRParserUNNAMMED_ADDR = 11
	IRParserNULL          = 12
	IRParserGLOBAL        = 13
	IRParserCONSTANT      = 14
	IRParserLPAREN        = 15
	IRParserRPAREN        = 16
	IRParserLBRACK        = 17
	IRParserRBRACK        = 18
	IRParserLBRACE        = 19
	IRParserRBRACE        = 20
	IRParserEQUAL         = 21
	IRParserDOUBLEQUOTE   = 22
	IRParserCOMMA         = 23
	IRParserSTAR          = 24
	IRParserPERCENT       = 25
	IRParserSEMICOLON     = 26
	IRParserEXCLAMATION   = 27
	IRParserAT            = 28
	IRParserDOT           = 29
	IRParserMULTIPLY      = 30
	IRParserMINUS         = 31
	IRParserTYPE_I8       = 32
	IRParserTYPE_I32      = 33
	IRParserTYPE_I64      = 34
	IRParserNAME          = 35
	IRParserDECIMALS      = 36
	IRParserMETADATA      = 37
	IRParserQUOTED_STRING = 38
	IRParserSTRING_LIT    = 39
)

// IRParser rules.
const (
	IRParserRULE_ir                           = 0
	IRParserRULE_statSeq                      = 1
	IRParserRULE_statSeqTail                  = 2
	IRParserRULE_stat                         = 3
	IRParserRULE_type_                        = 4
	IRParserRULE_singleValueType              = 5
	IRParserRULE_arrayType                    = 6
	IRParserRULE_pointerType                  = 7
	IRParserRULE_visibility                   = 8
	IRParserRULE_localIdent                   = 9
	IRParserRULE_localName                    = 10
	IRParserRULE_globalIdent                  = 11
	IRParserRULE_globalName                   = 12
	IRParserRULE_statGlobalDef                = 13
	IRParserRULE_statFunctDecl                = 14
	IRParserRULE_statFunctDef                 = 15
	IRParserRULE_functSignature               = 16
	IRParserRULE_functDeclArgsList            = 17
	IRParserRULE_functDeclArgsListTail        = 18
	IRParserRULE_functDeclArg                 = 19
	IRParserRULE_functAttribsList             = 20
	IRParserRULE_functAttrib                  = 21
	IRParserRULE_parameterAttrib              = 22
	IRParserRULE_functCallArgsList            = 23
	IRParserRULE_functCallArgsListTail        = 24
	IRParserRULE_functCallArg                 = 25
	IRParserRULE_instructionSeq               = 26
	IRParserRULE_instructionSeqTail           = 27
	IRParserRULE_instruction                  = 28
	IRParserRULE_instructionRet               = 29
	IRParserRULE_instructionCall              = 30
	IRParserRULE_instructionGetelementptr     = 31
	IRParserRULE_instructionGetelementptrTail = 32
	IRParserRULE_value                        = 33
	IRParserRULE_exprConstant                 = 34
)

// IIrContext is an interface to support dynamic dispatch.
type IIrContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIrContext differentiates from other interfaces.
	IsIrContext()
}

type IrContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIrContext() *IrContext {
	var p = new(IrContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_ir
	return p
}

func (*IrContext) IsIrContext() {}

func NewIrContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IrContext {
	var p = new(IrContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_ir

	return p
}

func (s *IrContext) GetParser() antlr.Parser { return s.parser }

func (s *IrContext) StatSeq() IStatSeqContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatSeqContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatSeqContext)
}

func (s *IrContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IrContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IrContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterIr(s)
	}
}

func (s *IrContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitIr(s)
	}
}

func (p *IRParser) Ir() (localctx IIrContext) {
	localctx = NewIrContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, IRParserRULE_ir)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.StatSeq()
	}

	return localctx
}

// IStatSeqContext is an interface to support dynamic dispatch.
type IStatSeqContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatSeqContext differentiates from other interfaces.
	IsStatSeqContext()
}

type StatSeqContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatSeqContext() *StatSeqContext {
	var p = new(StatSeqContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_statSeq
	return p
}

func (*StatSeqContext) IsStatSeqContext() {}

func NewStatSeqContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatSeqContext {
	var p = new(StatSeqContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_statSeq

	return p
}

func (s *StatSeqContext) GetParser() antlr.Parser { return s.parser }

func (s *StatSeqContext) Stat() IStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatContext)
}

func (s *StatSeqContext) StatSeqTail() IStatSeqTailContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatSeqTailContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatSeqTailContext)
}

func (s *StatSeqContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatSeqContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatSeqContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterStatSeq(s)
	}
}

func (s *StatSeqContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitStatSeq(s)
	}
}

func (p *IRParser) StatSeq() (localctx IStatSeqContext) {
	localctx = NewStatSeqContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, IRParserRULE_statSeq)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Stat()
	}
	{
		p.SetState(73)
		p.StatSeqTail()
	}

	return localctx
}

// IStatSeqTailContext is an interface to support dynamic dispatch.
type IStatSeqTailContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatSeqTailContext differentiates from other interfaces.
	IsStatSeqTailContext()
}

type StatSeqTailContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatSeqTailContext() *StatSeqTailContext {
	var p = new(StatSeqTailContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_statSeqTail
	return p
}

func (*StatSeqTailContext) IsStatSeqTailContext() {}

func NewStatSeqTailContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatSeqTailContext {
	var p = new(StatSeqTailContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_statSeqTail

	return p
}

func (s *StatSeqTailContext) GetParser() antlr.Parser { return s.parser }

func (s *StatSeqTailContext) StatSeq() IStatSeqContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatSeqContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatSeqContext)
}

func (s *StatSeqTailContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatSeqTailContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatSeqTailContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterStatSeqTail(s)
	}
}

func (s *StatSeqTailContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitStatSeqTail(s)
	}
}

func (p *IRParser) StatSeqTail() (localctx IStatSeqTailContext) {
	localctx = NewStatSeqTailContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, IRParserRULE_statSeqTail)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(77)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case IRParserDECLARE, IRParserDEFINE, IRParserAT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(75)
			p.StatSeq()
		}

	case IRParserEOF:
		p.EnterOuterAlt(localctx, 2)

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_stat
	return p
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) StatGlobalDef() IStatGlobalDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatGlobalDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatGlobalDefContext)
}

func (s *StatContext) StatFunctDecl() IStatFunctDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatFunctDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatFunctDeclContext)
}

func (s *StatContext) StatFunctDef() IStatFunctDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatFunctDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatFunctDefContext)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterStat(s)
	}
}

func (s *StatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitStat(s)
	}
}

func (p *IRParser) Stat() (localctx IStatContext) {
	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, IRParserRULE_stat)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(82)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case IRParserAT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(79)
			p.StatGlobalDef()
		}

	case IRParserDECLARE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(80)
			p.StatFunctDecl()
		}

	case IRParserDEFINE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(81)
			p.StatFunctDef()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IType_Context is an interface to support dynamic dispatch.
type IType_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsType_Context differentiates from other interfaces.
	IsType_Context()
}

type Type_Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyType_Context() *Type_Context {
	var p = new(Type_Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_type_
	return p
}

func (*Type_Context) IsType_Context() {}

func NewType_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Type_Context {
	var p = new(Type_Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_type_

	return p
}

func (s *Type_Context) GetParser() antlr.Parser { return s.parser }

func (s *Type_Context) SingleValueType() ISingleValueTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISingleValueTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISingleValueTypeContext)
}

func (s *Type_Context) ArrayType() IArrayTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArrayTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArrayTypeContext)
}

func (s *Type_Context) PointerType() IPointerTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPointerTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPointerTypeContext)
}

func (s *Type_Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Type_Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Type_Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterType_(s)
	}
}

func (s *Type_Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitType_(s)
	}
}

func (p *IRParser) Type_() (localctx IType_Context) {
	localctx = NewType_Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, IRParserRULE_type_)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(87)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(84)
			p.SingleValueType()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(85)
			p.ArrayType()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(86)
			p.PointerType()
		}

	}

	return localctx
}

// ISingleValueTypeContext is an interface to support dynamic dispatch.
type ISingleValueTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSingleValueTypeContext differentiates from other interfaces.
	IsSingleValueTypeContext()
}

type SingleValueTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySingleValueTypeContext() *SingleValueTypeContext {
	var p = new(SingleValueTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_singleValueType
	return p
}

func (*SingleValueTypeContext) IsSingleValueTypeContext() {}

func NewSingleValueTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SingleValueTypeContext {
	var p = new(SingleValueTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_singleValueType

	return p
}

func (s *SingleValueTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *SingleValueTypeContext) TYPE_I8() antlr.TerminalNode {
	return s.GetToken(IRParserTYPE_I8, 0)
}

func (s *SingleValueTypeContext) TYPE_I32() antlr.TerminalNode {
	return s.GetToken(IRParserTYPE_I32, 0)
}

func (s *SingleValueTypeContext) TYPE_I64() antlr.TerminalNode {
	return s.GetToken(IRParserTYPE_I64, 0)
}

func (s *SingleValueTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SingleValueTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SingleValueTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterSingleValueType(s)
	}
}

func (s *SingleValueTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitSingleValueType(s)
	}
}

func (p *IRParser) SingleValueType() (localctx ISingleValueTypeContext) {
	localctx = NewSingleValueTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, IRParserRULE_singleValueType)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(89)
		_la = p.GetTokenStream().LA(1)

		if !(((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(IRParserTYPE_I8-32))|(1<<(IRParserTYPE_I32-32))|(1<<(IRParserTYPE_I64-32)))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IArrayTypeContext is an interface to support dynamic dispatch.
type IArrayTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArrayTypeContext differentiates from other interfaces.
	IsArrayTypeContext()
}

type ArrayTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayTypeContext() *ArrayTypeContext {
	var p = new(ArrayTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IRParserRULE_arrayType
	return p
}

func (*ArrayTypeContext) IsArrayTypeContext() {}

func NewArrayTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayTypeContext {
	var p = new(ArrayTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_arrayType

	return p
}

func (s *ArrayTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayTypeContext) LBRACK() antlr.TerminalNode {
	return s.GetToken(IRParserLBRACK, 0)
}

func (s *ArrayTypeContext) DECIMALS() antlr.TerminalNode {
	return s.GetToken(IRParserDECIMALS, 0)
}

func (s *ArrayTypeContext) MULTIPLY() antlr.TerminalNode {
	return s.GetToken(IRParserMULTIPLY, 0)
}

func (s *ArrayTypeContext) Type_() IType_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IType_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IType_Context)
}

func (s *ArrayTypeContext) RBRACK() antlr.TerminalNode {
	return s.GetToken(IRParserRBRACK, 0)
}

func (s *ArrayTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArrayTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArrayTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterArrayType(s)
	}
}

func (s *ArrayTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitArrayType(s)
	}
}

func (p *IRParser) ArrayType() (localctx IArrayTypeContext) {
	localctx = NewArrayTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, IRParserRULE_arrayType)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(91)
		p.Match(IRParserLBRACK)
	}
	{
		p.SetState(92)
		p.Match(IRParserDECIMALS)
	}
	{
		p.SetState(93)
		p.Match(IRParserMULTIPLY)
	}
	{
		p.SetState(94)
		p.Type_()
	}
	{
		p.SetState(95)
		p.Match(IRParserRBRACK)
	}

	return localctx
}
